--- a/quokka-service-persona/pom.xml
+++ b/quokka-service-persona/pom.xml
@@ -9,20 +9,12 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.quokka.common</groupId>
-  <artifactId>quokka-commons</artifactId>
+  <groupId>io.quokka.persona</groupId>
+  <artifactId>quokka-service-persona</artifactId>
   <packaging>pom</packaging>
   <modules>
-    <module>quokka-common-orm</module>
+    <module>quokka-persona-persistence</module>
   </modules>
-
-  <properties>
-    <java.version>1.8</java.version>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-  </properties>
 
 
 </project>
